--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link href="style.css" rel="stylesheet"> 
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>All About Me!</h1>
     <script src="app.js"></script>
+    <h2>Let's see how you did with my questions!</h2>
+    <p class="odds">1. My hair is black.</p>
+    <p class="evens">2. I come from New Zealand.</p>
+    <p class="odds">3. My favorite board game is <em>Lord's of Waterdeep.</em></p>
+    <p class="evens">4. I once lived on a cherry orchard for 6 weeks.</p>
+    <p class="odds">5. If I could only eat one lunch for the rest of my life, I would definitely choose poke.</p>
 </body>
 </html>
