Fixed some mistakes I found in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>All About Me!</h1>
-    <!-- <script src="app.js"></script> -->
+    <script src="app.js"></script>
     <h2>Thanks for doing the quiz! <hr /> Let's see how you did with my questions!</h2>
     <p class="odds">1. My hair is black.</p>
     <p class="evens">2. I come from New Zealand.</p>
