Updated all files for Lab 3, finished queston 6 in app.js

--- a/index.html
+++ b/index.html
@@ -10,11 +10,52 @@
 <body>
     <h1>All About Me!</h1>
     <script src="app.js"></script>
-    <h2>Thanks for doing the quiz! <hr /> Let's see how you did with my questions!</h2>
-    <p class="odds">1. My hair is black.</p>
-    <p class="evens">2. I come from New Zealand.</p>
-    <p class="odds">3. My favorite board game is <em>Lords of Waterdeep.</em></p>
-    <p class="evens">4. I once lived on a cherry orchard for 6 weeks.</p>
-    <p class="odds">5. If I could only eat one lunch for the rest of my life, I would definitely choose poke.</p>
+    <h2>Thanks for doing the quiz! <hr /> Find out more about me below</h2>
+    
+    <h3>Education Summary</h3>
+    <ul>
+        <li>Codefellows</li>
+            <ul>
+                <li>February 2019 - Present</li>
+                <li>Javascript, HTML5, CSS3</li>
+            </ul>
+        <li>University of Otago</li>
+            <ul>
+                <li>January 2006 - November 2012</li>
+                <li>LL.B. Bachelor of Laws</li>
+                <li>B.A. Bachelor of Arts in French</li>
+            </ul>
+    </ul>
+
+    <h3>Work Experience</h3>
+    <ul>
+        <li>GLP Attorneys</li>
+            <ul>
+                <li>Legal Assistant</li>
+                <li>Burlington, WA</li>
+                <li>November 2017 - March 2019</li>
+            </ul>
+        <li>Aspinall Joel</li>
+            <ul>
+                <li>Law Clerk</li>
+                <li>Dunedin, New Zealand</li>
+                <li>November 2012 - July 2013</li>
+            </ul>
+    </ul>
+
+    <h3>Top ten countries I have visited!</h3>
+    <ol>
+        <li>New Zealand</li>
+        <li>Italy</li>
+        <li>Fiji</li>
+        <li>Indonesia</li>
+        <li>Mexico</li>
+        <li>Taiwan</li>
+        <li>United Kingdom</li>
+        <li>Hong Kong</li>
+        <li>Canada</li>
+        <li>Australia</li>
+    </ol>
+    
 </body>
 </html>
