--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>All About Me!</h1>
     <script src="app.js"></script>
-    <h2>Thanks for doing the quiz! <hr /> Find out more about me below</h2>
+    <h2>Thanks for doing the quiz! <hr /> Find out more about me below!</h2>
     
     <h3>Education Summary</h3>
     <ul>
