added Nick's re-building js page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Thanks for doing the quiz! <hr /> Find out more about me below!</h2>
     
     <h3>Education Summary</h3>
-    <ul>
+    <ul> <!--Could add text here to have quick title on list-->
         <li>Codefellows</li>
             <ul>
                 <li>February 2019 - Present</li>
