--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     
     <h3>Education Summary</h3>
     <ul> <!--Could add text here to have quick title on list-->
-        <li>Codefellows</li>
+        <li class="places">Codefellows</li>
             <ul>
                 <li>February 2019 - Present</li>
                 <li>Javascript, HTML5, CSS3</li>
             </ul>
-        <li>University of Otago</li>
+        <li class="places">University of Otago</li>
             <ul>
                 <li>January 2006 - November 2012</li>
                 <li>LL.B. Bachelor of Laws</li>
@@ -29,13 +29,13 @@
 
     <h3>Work Experience</h3>
     <ul>
-        <li>GLP Attorneys</li>
+        <li class="places">GLP Attorneys</li>
             <ul>
                 <li>Legal Assistant</li>
                 <li>Burlington, WA</li>
                 <li>November 2017 - March 2019</li>
             </ul>
-        <li>Aspinall Joel</li>
+        <li class="places">Aspinall Joel</li>
             <ul>
                 <li>Law Clerk</li>
                 <li>Dunedin, New Zealand</li>
